--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <!--mobile end-->
               </div>
         </div>
-        <div class=" mt-12 container mx-auto flex flex-col items-center justify-center gap-y-8">
+        <div class="mt-12 container mx-auto flex flex-col items-center justify-center gap-y-8">
             <h3 class="text-2xl lg:text-4xl lg:text-4xl text-white font-extrabold tracking-wider font-bold text-center">
                 Terms & Conditions
             </h3>
@@ -132,7 +132,7 @@
 
     <!--==============================================================
     ===================================================================== -->
-  <div class="h-auto bg-white mt-16 flex flex-col items-start lg:items-center justify-center">
+  <div class="h-auto bg-white mt-16 ml-12 lg:ml-0 flex flex-col items-start lg:items-center justify-center">
     <div class="container mx-auto flex flex-col lg:flex-row justify-between space-y-16">
       <div class="flex flex-col items-start justify-center space-y-4 lg:mt-12">
         <img class="w-20" src="./img/footer-logo.png">
